# rad-report

./: .env  Cargo.toml  Rocket.toml  diesel.toml  login.html  login_styles.css
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-06-09-193642_create_cases_table/: down.sql  up.sql
migrations/2024-06-09-194359_add_all_columns_to_users/: down.sql  up.sql
scripts/: generate_fake_data.py
src/: dashboard.rs  lib.rs  login.rs  main.rs  models.rs  schema.rs
static/dashboard/: dash_styles.css  dashboard.js  index.html.tera
static/login/: index.html  login.js  login_styles.css
templates/: README  dashboard.html.tera
