[package]
name = "rad-report"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = { version = "1.0.203", features = ["derive"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
dotenvy = "0.15"
chrono = "0.4.38"
serde_json = "1.0.117"
jsonwebtoken = "9.3.0"
